modifying user interface

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
   <script src="{{ url_for('static', filename='js/vendor/jquery.js') }}"></script>
   <script src="{{ url_for('static', filename='js/vendor/fastclick.js') }}"></script>
   <script src="{{ url_for('static', filename='js/foundation.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/foundation/foundation.equalizer.js') }}"></script>
   <script>
     $(document).foundation();
   </script>
