--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -101,79 +101,88 @@
          
      
             <div class="large-8 columns">
-              <div class="row">
-     
-                <div class="large-4 small-6 columns">
+              <div class="row" data-equalizer>
+      
+                <div class="large-6 small-6 columns" data-equalizer-watch>
                   <ul class="pricing-table">
-                    <li class="title">Standard</li>
-                    <li class="price">$99.99</li>
+                    <li class="title">Jokowi</li>
+                    <li class="price">7876 Results</li>
                     <li class="description">An awesome description</li>
                     <li class="bullet-item">1 Database</li>
                     <li class="bullet-item">5GB Storage</li>
                     <li class="bullet-item">20 Users</li>
                     <li class="cta-button">
-                      <div class="clearfix">
-                        <a class="button tiny"><i class="fa fa-play"></i></a>
-                        <a class="button tiny"><i class="fa fa-pause"></i></a>
-                        <a class="button tiny"><i class="fa fa-trash"></i></a>
+                      <div class="panel clearfix">
+                        <a class="button radius success tiny"><i class="fa fa-play"></i></a>
+                        <a class="button radius info tiny"><i class="fa fa-pause"></i></a>
+                        <a class="button radius alert tiny"><i class="fa fa-trash"></i></a>
+                        <a class="button radius alert tiny"><i class="fa fa-check"></i></a>
+                        <a class="button radius secondary tiny"><i class="fa fa-times"></i></a>
                       </div>
                     </li>
                   </ul>
                 </div>
 
-                <div class="large-4 small-6 columns">
-                  <img src="http://placehold.it/1000x1000&text=Thumbnail">
-     
-                  <div class="panel">
-                    <h5>Item Name</h5>
-                    <h6 class="subheader">$000.00</h6>
-                  </div>
+                <div class="large-6 small-6 columns" data-equalizer-watch>
+                  <ul class="pricing-table">
+                    <li class="title">Jokowi</li>
+                    <li class="price">7876 Results</li>
+                    <li class="description">An awesome description</li>
+                    <li class="bullet-item">1 Database</li>
+                    <li class="bullet-item">5GB Storage</li>
+                    <li class="bullet-item">20 Users</li>
+                    <li class="cta-button">
+                      <div class="panel clearfix">
+                        <a class="button radius success tiny"><i class="fa fa-play"></i></a>
+                        <a class="button radius info tiny"><i class="fa fa-pause"></i></a>
+                        <a class="button radius alert tiny"><i class="fa fa-trash"></i></a>
+                        <a class="button radius alert tiny"><i class="fa fa-check"></i></a>
+                        <a class="button radius secondary tiny"><i class="fa fa-times"></i></a>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
-     
-                <div class="large-4 small-6 columns">
-                  <img src="http://placehold.it/500x500&text=Thumbnail">
-     
-                  <div class="panel">
-                    <h5>Item Name</h5>
-                    <h6 class="subheader">$000.00</h6>
-                  </div>
+
+                <div class="large-6 small-6 columns" data-equalizer-watch>
+                  <ul class="pricing-table">
+                    <li class="title">Jokowi</li>
+                    <li class="price">7876 Results</li>
+                    <li class="description">An awesome description</li>
+                    <li class="bullet-item">1 Database</li>
+                    <li class="bullet-item">5GB Storage</li>
+                    <li class="bullet-item">20 Users</li>
+                    <li class="cta-button">
+                      <div class="panel clearfix">
+                        <a class="button radius success tiny"><i class="fa fa-play"></i></a>
+                        <a class="button radius info tiny"><i class="fa fa-pause"></i></a>
+                        <a class="button radius alert tiny"><i class="fa fa-trash"></i></a>
+                        <a class="button radius alert tiny"><i class="fa fa-check"></i></a>
+                        <a class="button radius secondary tiny"><i class="fa fa-times"></i></a>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
-     
-                <div class="large-4 small-6 columns">
-                  <img src="http://placehold.it/500x500&text=Thumbnail">
-     
-                  <div class="panel">
-                    <h5>Item Name</h5>
-                    <h6 class="subheader">$000.00</h6>
-                  </div>
+
+                <div class="large-6 small-6 columns" data-equalizer-watch>
+                  <ul class="pricing-table">
+                    <li class="title">Jokowi</li>
+                    <li class="price">7876 Results</li>
+                    <li class="description">An awesome description</li>
+                    <li class="bullet-item">1 Database</li>
+                    <li class="bullet-item">5GB Storage</li>
+                    <li class="bullet-item">20 Users</li>
+                    <li class="cta-button">
+                      <div class="panel clearfix">
+                        <a class="button radius success tiny"><i class="fa fa-play"></i></a>
+                        <a class="button radius info tiny"><i class="fa fa-pause"></i></a>
+                        <a class="button radius alert tiny"><i class="fa fa-trash"></i></a>
+                        <a class="button radius alert tiny"><i class="fa fa-check"></i></a>
+                        <a class="button radius secondary tiny"><i class="fa fa-times"></i></a>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
-     
-                <div class="large-4 small-6 columns">
-                  <img src="http://placehold.it/500x500&text=Thumbnail">
-     
-                  <div class="panel">
-                    <h5>Item Name</h5>
-                    <h6 class="subheader">$000.00</h6>
-                  </div>
-                </div>
-     
-                <div class="large-4 small-6 columns">
-                  <img src="http://placehold.it/500x500&text=Thumbnail">
-     
-                  <div class="panel">
-                    <h5>Item Name</h5>
-                    <h6 class="subheader">$000.00</h6>
-                  </div>
-                </div>
-     
-                <div class="large-4 small-6 columns">
-                  <img src="http://placehold.it/500x500&text=Thumbnail">
-     
-                  <div class="panel">
-                    <h5>Item Name</h5>
-                    <h6 class="subheader">$000.00</h6>
-                  </div>
-                </div>
+
               </div>
      
          
@@ -185,11 +194,11 @@
                   <div class="panel">
                     <div class="row">
      
-                      <div class="large-2 small-6 columns">
+                      <div class="large-2 small-6 columns" data-equalizer-watch>
                         <img src="http://placehold.it/300x300&text=Site Owner">
                       </div>
      
-                      <div class="large-10 small-6 columns">
+                      <div class="large-10 small-6 columns" data-equalizer-watch>
                         <strong>This Site Is Managed By<hr/></strong>
      
                         Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Donec dignissim nibh fermentum odio ornare sagittis
