finishing twitter scrapper v2

--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -14,11 +14,11 @@
   <div class="large-6 small-12 columns">
     <div class="panel callout" id="message">Enter new keyword to stream.</div>
     <form class="row collapse" onsubmit="return addkeyword();">
-      <div class="small-10 columns">
-        <input id="keyword" type="text" placeholder="new keyword" required>
-      </div>
+      <div class="small-1 columns"><span class="prefix">@</span></div>
+      <div class="small-4 columns"><input id="username" type="text" placeholder="jokowi" autofocus></div>
+      <div class="small-5 columns"><input id="keyword" type="text" placeholder="bbm naik"></div>
       <div class="small-2 columns">
-        <button id="plus_button" class="button secondary postfix"><i id="content_button" class="fa fa-lg fa-plus"></i></button>
+        <button id="plus_button" class="button postfix"><i id="content_button" class="fa fa-lg fa-plus"></i></button>
       </div>
     </form>
   </div>
@@ -43,17 +43,13 @@
 <!-- SAMPLE DIV -->
 <li hidden id="sample" class="" data-equalizer-watch>
   <ul class="pricing-table">
-    <li class="title">Jokowi</li>
-    <li class="price">7876 Results</li>
-    <li class="description">status: active streaming</li>
-    <li class="bullet-item">tweet 1</li>
-    <li class="bullet-item">tweet 2</li>
-    <li class="bullet-item">tweet 3</li>
-    <li class="cta-button">
-      <span onclick="stream(this,1);"><a class="button radius success tiny"><i class="fa fa-play"></i></a></span>
-      <span onclick="stream(this,0);"><a class="button radius secondary tiny"><i class="fa fa-pause"></i></a></span>
-      <span onclick="unstream(this);"><a class="button radius alert tiny"><i class="fa fa-trash"></i></a></span>
-    </li>
+    <li class="title"></li>
+    <li class="price"></li>
+    <li class="description"></li>
+    <li class="bullet-item"></li>
+    <li class="bullet-item"></li>
+    <li class="bullet-item"></li>
+    <li class="cta-button"></li>
   </ul>
 </li>
 
