--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -23,7 +23,7 @@
   </div>
 
   <div class="row">
-    <div class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+    <div class="small-block-grid-1 large-block-grid-3">
 
       <li ng-class="{'animated jello': info.status=='processing'}" ng-repeat="info in summary">
         <ul class="pricing-table">
