tweet streamer now can run in more than 1 instance. top retweets has been implemented, but still SLOW.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -10,3 +10,24 @@ body {
   color: lightblue;
   font-weight: bolder;
 }
+
+.user {
+  font-size: 11pt;
+}
+
+.user >
+  .name {
+    font-weight: bolder;
+  }
+
+  .username {
+    font-style: italic;
+  }
+
+  .count {
+    
+  }
+
+.text {
+  font-size: 10pt;
+}
