--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -6,7 +6,7 @@
 
   <nav class="top-bar" data-topbar>
     <span class="name text-center">
-      <h1 class="title"><i class="fa fa-twitter fa-lg"></i> Tweet Streamer</h1>
+      <h1 class="title"><i class="fa fa-twitter fa-lg fa-spin"></i> Tweet Streamer</h1>
     </span>
   </nav>
 
@@ -14,10 +14,10 @@
 
   <div class="row">
     <div class="large-6 small-12 columns">
-      <div class="panel callout" id="message">Enter new keyword to stream.</div>
+      <div class="label secondary" id="message">Enter new keyword to stream.</div>
       <form class="row collapse" ng-submit="submit()">
         <div class="small-10 columns"><input ng-model="keyword" type="text" placeholder="joko widodo" required autofocus></div>
-        <div class="small-2 columns"><button ng-disabled="is_sending_kw" class="button postfix"><i class="fa fa-lg" ng-class="{'fa-spinner fa-spin':is_sending_kw,'fa-plus':!is_sending_kw}"></i></button></div>
+        <div class="small-2 columns"><button ng-disabled="is_sending_kw" class="button postfix secondary"><i class="fa fa-lg" ng-class="{'fa-spinner fa-pulse fa-spin':is_sending_kw,'fa-plus':!is_sending_kw}"></i></button></div>
       </form>
     </div>
   </div>
@@ -25,19 +25,19 @@
   <div class="row">
     <div class="small-block-grid-1 large-block-grid-3">
 
-      <li ng-class="{'animated jello': info.status=='processing'}" ng-repeat="info in summary">
+      <li ng-style="info.status=='inactive' && {'opacity': 0.6}" ng-repeat="info in summary">
         <ul class="pricing-table">
           {% raw %}
           <a href="/analyze/{{ info.keyword | encodeURIComponent }}">
-            <li class="title keyword" ng-style="info.status=='inactive' && {background:'grey'}">{{info.keyword}}</li>
+            <li class="title keyword">{{info.keyword}}</li>
           </a>
-          <li class="price">{{info.count}}</li>
-          <li class="description">from {{info.from}} <br> to {{info.to}} <br> status: {{info.status}}</li>
+          <li class="price"><i ng-show="info.processing" class="fa fa-spinner fa-pulse fa-spin"></i><span ng-hide="info.processing">{{info.count}}</span></li>
+          <!-- <li class="description"></li> -->
           <li class="bullet-item" ng-repeat="tweet in info.tweets">{{tweet}}</li>
           <li class="cta-button">
-            <button ng-disabled="info.is_streaming" ng-click="stream(info, 'active')" ng-show="info.status=='inactive'" class="button radius secondary tiny"><i class="fa fa-play"></i></button>
-            <button ng-disabled="info.is_streaming" ng-click="stream(info, 'inactive')" ng-show="info.status=='active'"class="button radius secondary tiny"><i class="fa fa-pause"></i></button>
-            <button ng-disabled="info.is_streaming" ng-click="stream(info, 'removed')" ng-show="info.status!='processing'" class="button radius secondary tiny"><i class="fa fa-trash"></i></button>
+            <button ng-disabled="info.is_streaming || info.processing" ng-click="stream(info, 'active')" ng-hide="info.status=='active'" class="button radius secondary tiny"><i class="fa fa-play"></i></button>
+            <button ng-disabled="info.is_streaming || info.processing" ng-click="stream(info, 'inactive')" ng-hide="info.status=='inactive'"class="button radius secondary tiny"><i class="fa fa-pause"></i></button>
+            <button ng-disabled="info.is_streaming || info.processing" ng-click="stream(info, 'removed')" class="button radius secondary tiny"><i class="fa fa-trash"></i></button>
           </li>
           {% endraw %}
         </ul>
